--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -168,8 +168,9 @@ a{
     align-items: center;
     height: 100%;
 }
-.navbar-nav li a:hover{
-    box-shadow: 0px 3px 0px 0px var(--green3);
+.navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
+    box-shadow: 0px 3px 0px 0px var(--green3) !important;
+    color: var(--green3);
 }
 
 
@@ -206,13 +207,13 @@ a{
 /* ****************************** 
         Nuestros servicios 
 ****************************** */
-#nuestros_servicios{
+#nuestros-servicios{
     background-image: url("../images/back1.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
-#nuestros_servicios .tit-serv{
+#nuestros-servicios .tit-serv{
     height: 50px;
 }
 
@@ -413,8 +414,8 @@ footer .copyright{
         text-align: center !important;
     }
     
-    #nuestros_servicios .tit-serv{
-        height: auto;
+    #nuestros-servicios .tit-serv{
+        height: auto;   
     }
     
     #CarBeneficios .carousel-item{
